<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rlContact"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/selector_item_click_bg"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_list"
            android:textColor="@color/black6"
            android:textSize="@dimen/sp15" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f6f6f6" />

    <RelativeLayout
        android:id="@+id/rlAddContact"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/selector_item_click_bg"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_contact"
            android:textColor="@color/black6"
            android:textSize="@dimen/sp15" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f6f6f6" />

    <RelativeLayout
        android:id="@+id/rlSetTag"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/selector_item_click_bg"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_tag"
            android:textColor="@color/black6"
            android:textSize="@dimen/sp15" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f6f6f6"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/rlAddTag"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/selector_item_click_bg"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="添加标签"
            android:textColor="@color/black6"
            android:textSize="@dimen/sp15" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f6f6f6" />

    <RelativeLayout
        android:id="@+id/rlAddRemind"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/selector_item_click_bg"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_remind"
            android:textColor="@color/black6"
            android:textSize="@dimen/sp15" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f6f6f6" />

    <RelativeLayout
        android:id="@+id/rlRemindList"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/selector_item_click_bg"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remind_list"
            android:textColor="@color/black6"
            android:textSize="@dimen/sp15" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f6f6f6" />

    <RelativeLayout
        android:id="@+id/rlBindDevice"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/selector_item_click_bg"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bind_device"
            android:textColor="@color/black6"
            android:textSize="@dimen/sp15" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f6f6f6" />

    <RelativeLayout
        android:id="@+id/rlEleList"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/selector_item_click_bg"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/electronic_fence"
            android:textColor="@color/black6"
            android:textSize="@dimen/sp15" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f6f6f6" />

    <RelativeLayout
        android:id="@+id/rlAddEle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/selector_item_click_bg"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_electronic_fence"
            android:textColor="@color/black6"
            android:textSize="@dimen/sp15" />
    </RelativeLayout>

</LinearLayout>