<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:orientation="vertical">

    <include layout="@layout/layout_title_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutHeadImg"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/selector_item_click_bg"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp_16"
                android:paddingRight="@dimen/dp_16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/portrait"
                    android:textColor="@color/black6"
                    android:textSize="@dimen/sp15" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/ivHeadImg"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@mipmap/ic_default_portrait" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="16dp"
                    android:src="@mipmap/icon_right" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f6f6f6" />

            <LinearLayout
                android:id="@+id/layoutNickName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/selector_item_click_bg"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp_16"
                android:paddingRight="@dimen/dp_16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nickname"
                    android:textColor="@color/black6"
                    android:textSize="@dimen/sp15" />


                <TextView
                    android:id="@+id/tvNickName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:hint="@string/not_filled"
                    android:maxLines="1"
                    android:textColor="@color/black6"
                    android:textColorHint="@color/black9"
                    android:textSize="@dimen/sp15" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="16dp"
                    android:src="@mipmap/icon_right" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f6f6f6" />

            <LinearLayout
                android:id="@+id/layoutSex"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/selector_item_click_bg"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp_16"
                android:paddingRight="@dimen/dp_16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex"
                    android:textColor="@color/black6"
                    android:textSize="@dimen/sp15" />


                <TextView
                    android:id="@+id/tvSex"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:hint="@string/not_filled"
                    android:maxLines="1"
                    android:textColor="@color/black6"
                    android:textColorHint="@color/black9"
                    android:textSize="@dimen/sp15" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="16dp"
                    android:src="@mipmap/icon_right" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f6f6f6" />


            <LinearLayout
                android:id="@+id/layoutPhone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/selector_item_click_bg"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp_16"
                android:paddingRight="@dimen/dp_16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:textColor="@color/black6"
                    android:textSize="@dimen/sp15" />

                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:hint="@string/not_filled"
                    android:maxLines="1"
                    android:textColor="@color/black6"
                    android:textColorHint="@color/black9"
                    android:textSize="@dimen/sp15" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="16dp"
                    android:src="@mipmap/icon_right" />

            </LinearLayout>


            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                android:background="@drawable/shape_button_bg"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="@dimen/sp15" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>