<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:orientation="vertical">


    <aio.health2world.recyclerview.RecyclerCoverFlow
        android:id="@+id/recyclerCoverFlow"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:background="@mipmap/bg_home_top" />

    <aio.health2world.scrollablelayout.ScrollableLayout
        android:id="@+id/scrollableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="@dimen/dp_8">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_home_time" />

                    <TextView
                        android:id="@+id/tvTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_8"
                        android:gravity="center"
                        android:text="--"
                        android:textColor="@color/black6"
                        android:textSize="@dimen/sp14" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_home_weather" />

                    <TextView
                        android:id="@+id/tvWeather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_6"
                        android:text="--"
                        android:textColor="@color/black6"
                        android:textSize="@dimen/sp14" />
                </LinearLayout>

            </LinearLayout>


            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/lineChart"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingBottom="@dimen/dp_4" />
        </LinearLayout>


        <RelativeLayout
            android:id="@+id/rlSports"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@color/white"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/sports_talent"
                android:textSize="@dimen/sp16" />

            <ImageView
                android:id="@+id/ivSports"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_18"
                android:layout_toEndOf="@id/tvTitle"
                android:src="@drawable/icon_parent_man" />

            <TextView
                android:id="@+id/tvStepNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_18"
                android:layout_toEndOf="@id/ivSports"
                android:text="--"
                android:textColor="@color/appThemeColor"
                android:textSize="@dimen/sp17" />

            <TextView
                android:id="@+id/tvMore"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:text="@string/more"
                android:textSize="@dimen/sp15" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16"
            android:text="@string/remind_notify"
            android:textSize="@dimen/sp16" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white" />

    </aio.health2world.scrollablelayout.ScrollableLayout>
</LinearLayout>
